# FFmpegPlayer

./: README.md
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/example/administrator/ffmpegplayer/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: multi.cpp  native-lib.cpp
app/src/main/java/com/example/administrator/ffmpegplayer/: MainActivity.java  VideoView.java
app/src/main/jni/: division.cpp
app/src/main/res/layout/: activity_main.xml
app/src/test/java/com/example/administrator/ffmpegplayer/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
